Fix item controls padding - Fix progress bar spacing

--- a/src/styles/ListItem.module.css
+++ b/src/styles/ListItem.module.css
@@ -57,7 +57,7 @@
 @media (min-width: 700px) {
 
     .list-item, .list-item-hidden{
-        gap: 20px;
+        gap: 5px;
         padding: 10px;
     }
 
